fixed cart dropdown alignment

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -9,8 +9,13 @@
   border: 1px solid black;
   background-color: white;
   top: 90px;
-  right: 40px;
+  right: 0;
   z-index: 5;
+
+  .empty-message{
+    margin: 50px auto;
+    font-size: 18px;
+  }
 
   .cart-items {
     height: 240px;
